# SeaBattle

./: .clang-format  .gitignore  CMakeLists.txt
common/: CMakeLists.txt
common/include/: Protocol.hpp  Types.hpp
server/: CMakeLists.txt
server/src/: main.cpp
server/src/game/: Board.cpp  Board.hpp  Game.cpp  Game.hpp  GameManager.cpp  GameManager.hpp  GameRules.cpp  GameRules.hpp  Ship.cpp  Ship.hpp
server/src/lobby/: InviteManager.cpp  InviteManager.hpp  Lobby.cpp  Lobby.hpp  Matchmaker.cpp  Matchmaker.hpp
server/src/network/: ISession.hpp  MessageHandler.cpp  MessageHandler.hpp  Server.cpp  Server.hpp  Session.cpp  Session.hpp  SessionManager.cpp  SessionManager.hpp
server/src/player/: FriendList.cpp  FriendList.hpp  IPlayer.hpp  Player.cpp  Player.hpp  PlayerManager.cpp  PlayerManager.hpp  PlayerStats.cpp  PlayerStats.hpp
server/src/protocol/: MessageBuilder.cpp  MessageBuilder.hpp  MessageParser.cpp  MessageParser.hpp
server/src/utils/: GuidGenerator.cpp  GuidGenerator.hpp  Logger.cpp  Logger.hpp
server/tests/: CMakeLists.txt
server/tests/concurrency/: ThreadSafetyTest.cpp
server/tests/game/: BoardTest.cpp  GameRulesTest.cpp  GameTest.cpp  ShipTest.cpp
server/tests/integration/: IntegrationTest.cpp
server/tests/lobby/: InviteManagerTest.cpp  LobbyTest.cpp  MatchmakerTest.cpp
server/tests/mocks/: MockPlayer.hpp  MockSession.hpp
server/tests/network/: MessageHandlerTest.cpp  ProtocolEndianTest.cpp  ServerTest.cpp  SessionManagerTest.cpp  SessionTest.cpp
server/tests/player/: FriendListTest.cpp  PlayerManagerTest.cpp  PlayerStatsTest.cpp
server/tests/protocol/: MessageBuilderTest.cpp  MessageParserTest.cpp
